changed front page to dynamically change based on which topic of maths and difficulty user selected as well as separate client and server rendering

--- a/frontend/src/components/question/Question.module.css
+++ b/frontend/src/components/question/Question.module.css
@@ -14,7 +14,7 @@
   border: 1px solid white;
   display: flex;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   font-size: 24px;
 }
 
