--- a/frontend/src/app/docs/[...slug]/page.module.css
+++ b/frontend/src/app/docs/[...slug]/page.module.css
@@ -13,9 +13,11 @@
   height: 100px;
   border: 1px solid white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items: left;
+  align-items: center;
   font-size: 24px;
+  white-space: pre-wrap;
 }
 
 .inputBox {
